[gd_scene load_steps=2 format=2]

[ext_resource path="res://levels/detectors/world_detector/world_detector.gd" type="Script" id=1]

[node name="WorldDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="NewTile" type="RayCast2D" parent="."]
position = Vector2( 152, -200 )
enabled = true
target_position = Vector2( 0, 400 )
collision_mask = 2

[node name="OldTile" type="RayCast2D" parent="."]
position = Vector2( -152, -200 )
enabled = true
target_position = Vector2( 0, 400 )
collision_mask = 2

[node name="OldPipe" type="RayCast2D" parent="."]
position = Vector2( -152, -200 )
enabled = true
target_position = Vector2( 0, 400 )
collision_mask = 4
